# linux-headers

./: .gitignore  GNUmakefile  README.md  README.rst  meson.build  meson_options.txt  update_headers.sh
.github/workflows/: update.yml
arch/alpha/asm/: compiler.h  fpu.h  ioctls.h  pal.h  param.h  ptrace.h  signal.h  socket.h  swab.h  types.h  unistd.h  unistd_32.h
arch/arc/asm/: elf.h  page.h  ptrace.h  unistd.h
arch/arm/asm/: signal.h  unistd.h
arch/arm64/asm/: hwcap.h
arch/avr32/asm/: ioctls.h  setup.h  signal.h  socket.h  swab.h  termios.h  types.h  unistd.h
arch/blackfin/asm/: bfin_sport.h  byteorder.h  fixed_code.h  ioctls.h  poll.h  posix_types.h  ptrace.h  sigcontext.h  siginfo.h  signal.h  stat.h  swab.h  unistd.h
arch/c6x/asm/: swab.h
arch/cris/asm/: ptrace_v32.h  signal.h  sync_serial.h  unistd.h
arch/frv/asm/: ioctls.h  param.h  posix_types.h  signal.h  types.h  unistd.h
arch/h8300/asm/: bitsperlong.h  ioctls.h  posix_types.h  ptrace.h  signal.h  types.h  unistd.h
arch/ia64/asm/: gcc_intrin.h  intrinsics.h  ioctls.h  mman.h  perfmon.h  signal.h  swab.h  termios.h  types.h  unistd.h  unistd_64.h
arch/m32r/asm/: ioctls.h  param.h  posix_types.h  ptrace.h  signal.h  termios.h  types.h  unistd.h
arch/m68k/asm/: bootinfo.h  ioctls.h  ptrace.h  signal.h  swab.h  types.h  unistd.h  unistd_32.h
arch/metag/asm/: swab.h
arch/microblaze/asm/: elf.h  ioctls.h  param.h  ptrace.h  setup.h  signal.h  termios.h  types.h  unistd.h  unistd_32.h
arch/mips/asm/: inst.h  ioctls.h  ptrace.h  sigcontext.h  siginfo.h  socket.h  swab.h  unistd.h  unistd_nr_n32.h  unistd_nr_n64.h  unistd_nr_o32.h
arch/mn10300/asm/: ioctls.h  param.h  posix_types.h  ptrace.h  setup.h  signal.h  swab.h  termios.h  types.h  unistd.h
arch/nios2/asm/: elf.h  ptrace.h  swab.h
arch/openrisc/asm/: elf.h
arch/parisc/asm/: ioctls.h  pdc.h  ptrace.h  signal.h  socket.h  swab.h  termios.h  unistd.h  unistd_32.h  unistd_64.h
arch/powerpc/asm/: elf.h  (+5 more)
include/asm-generic/: siginfo.h
include/linux/: audit.h  target_core_user.h  version.h
(+190 files in other folders)
